[package]
name = "key-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "key-server"
path = "src/server.rs"

[dependencies]
fastcrypto.workspace = true
rand.workspace = true
serde.workspace = true
hex.workspace = true
bcs.workspace = true
tracing.workspace = true
sui_types.workspace = true

mysten-service = { git = "https://github.com/mystenlabs/sui", rev = "a4d797460e70de576c1fe4081c78fab924c28b25", package = "mysten-service" }
sui_sdk = { git = "https://github.com/mystenlabs/sui", rev = "a4d797460e70de576c1fe4081c78fab924c28b25", package = "sui-sdk"}
shared_crypto = { git = "https://github.com/MystenLabs/sui", rev = "a4d797460e70de576c1fe4081c78fab924c28b25", package = "shared-crypto" }
tokio = { version = "1.44.2", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5.2"
reqwest = { version = "0.12.15", features = ["json"] }
tower-http = { version = "0.6.0", features = ["cors"] }
crypto = { path = "../crypto" }
tap = "1.0.1"
prometheus = "0.13.3"
anyhow = "1.0.79"
lru = "0.13.0"
parking_lot = "0.12.3"
once_cell = "1.20.2"
chrono = "0.4.39"
serde_json = "1.0.140"

[dev-dependencies]
tracing-test = "0.2.5"
test_cluster = { git = "https://github.com/mystenlabs/sui", rev = "a4d797460e70de576c1fe4081c78fab924c28b25", package = "test-cluster" }
sui_move_build = { git = "https://github.com/mystenlabs/sui", rev = "a4d797460e70de576c1fe4081c78fab924c28b25", package = "sui-move-build" }
